--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+
 body
 {
     margin: 0;
-    font-family: sans-serif;
-    font-size: 1.1em;
+    font-family: 'Noto Sans', sans-serif;
     line-height: 1.5;
     background: white;
 }
@@ -14,6 +15,8 @@ body
 
 header
 {
+    font-family: 'Noto Sans', sans-serif;
+    line-height: 1.5 !important;
     grid-template-columns: 50px auto 50px;
     grid-template-rows: 50px 37px;
     justify-items: center;
@@ -86,8 +89,63 @@ header
     border: 1px solid #762C8E;
     background: #762C8E;
     text-align: center;
-    color: #fff;
+    color: white;
     border-radius: 5px;
     cursor: pointer;
     font-size: 20px;
+}
+
+.login
+{
+    display: none;
+}
+
+.login-btn
+{
+    text-transform: uppercase;
+    text-decoration: none;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;  
+}
+
+.login-btn i.fa.fa-user
+{
+    padding-right: 5px;
+    font-size: 1.5em;
+}
+
+/*Tablet*/
+@media screen and (min-width: 1024px)
+{
+    header
+    {
+        grid-template-columns: 200px auto 200px 70px;
+    }
+
+    .logo
+    {
+        grid-column: 1/2;
+        grid-row: 1/3;
+    }
+
+    .wrap
+    {
+        grid-column: 2/3;
+        grid-row: 1/3; 
+    }
+
+    .cart
+    {
+        grid-column: 4/5;
+        grid-row: 1/3;
+        font-size: 1.5em;
+    }
+
+    .login
+    {
+        display: block;
+        grid-column: 3/4;
+        grid-row: 1/3;
+    }
 }
