--- a/slideshow.css
+++ b/slideshow.css
@@ -1,19 +1,22 @@
-* {box-sizing:border-box}
-
-.slide-wrapper
-{
-	max-width: 1000px;
-	position: relative;
-	margin: auto;
-}
-
-.slide-wrapper .slide img
+#slide-wrapper
 {
 	width: 100%;
+	height: 240px;
+	position: relative;
+	margin-top: 2.5px;
+	overflow: hidden;
+}
+
+#slide-wrapper .slide img
+{
+	width: 100%;
+	height: 100%;
 }
 
 .slide
 {
+	width: 100%;
+	height: 100%;
 	position: absolute;
 	display: none;
 }
@@ -21,15 +24,15 @@
 .prev, .next {
 	cursor: pointer;
 	position: absolute;
-	top: 50%;
+	top: 90px;
 	width: auto;
-	margin-top: -22px;
-	padding: 16px;
 	color: white;
+	padding: 15px;
 	font-weight: bold;
 	font-size: 18px;
 	transition: 0.6s;
 	border-radius: 0 3px 3px 0;
+	outline: none;
 }
 
 .next {
@@ -43,10 +46,12 @@
 
 .caption-text {
 	color: #f2f2f2;
-	font-size: 15px;
-	padding: 8px 12px;
+	background: rgba(0,0,0,0.5);
+	font-size: 24px;
 	position: absolute;
-	bottom: 8px;
+	padding-top: 5px;
+	padding-bottom: 5px; 
+	bottom: 0px;
 	width: 100%;
 	text-align: center;
 }
