--- a/slideshow.css
+++ b/slideshow.css
@@ -1,10 +1,13 @@
+.slideshow
+{
+	margin-top: 2.5px;
+}
+
 #slide-wrapper
 {
 	width: 100%;
 	height: 240px;
 	position: relative;
-	margin-top: 2.5px;
-	overflow: hidden;
 }
 
 #slide-wrapper .slide img
@@ -15,19 +18,20 @@
 
 .slide
 {
-	width: 100%;
+	width:100%;
 	height: 100%;
 	position: absolute;
 	display: none;
+	overflow: hidden;
 }
 
 .prev, .next {
 	cursor: pointer;
 	position: absolute;
-	top: 90px;
 	width: auto;
-	color: white;
 	padding: 15px;
+	top: 87px;
+	color: white;
 	font-weight: bold;
 	font-size: 18px;
 	transition: 0.6s;
@@ -41,28 +45,30 @@
 }
 
 .prev:hover, .next:hover {
-	background-color: rgba(0,0,0,0.8);
+	background-color: rgba(116, 43, 140, 0.8);
 }
 
 .caption-text {
+	background: rgba(0,0,0,0.4);
 	color: #f2f2f2;
-	background: rgba(0,0,0,0.5);
-	font-size: 24px;
+	font-size: 18px;
 	position: absolute;
-	padding-top: 5px;
-	padding-bottom: 5px; 
+	padding-top: 10px;
+	padding-bottom: 10px;
 	bottom: 0px;
 	width: 100%;
-	text-align: center;
+	padding-left: 10px;
 }
 
 .dot {
 	position: relative;
+	left: 50%;
 	cursor: pointer;
-	height: 15px;
-	width: 15px;
+	transform: translateX(-35px);
+	height: 10px;
+	width: 10px;
 	margin: 0 2px;
-	background-color: #bbb;
+	background-color: #B99EC1;
 	border-radius: 50%;
 	display: inline-block;
 	transition: background-color 0.6s ease;
@@ -70,5 +76,5 @@
 }
 
 .active, .dot:hover {
-	background-color: #717171;
+	background-color: #762c8e;
 }
