--- a/slideshow.css
+++ b/slideshow.css
@@ -7,7 +7,7 @@
 #slide-wrapper
 {
 	width: 100%;
-	height: 240px;
+	height: 56.25vw;
 	position: relative;
 }
 
@@ -31,10 +31,11 @@
 	position: absolute;
 	width: auto;
 	padding: 15px;
-	top: 87px;
+	top: 50%;
+	transform: translateY(-50%);
 	color: white;
 	font-weight: bold;
-	font-size: 18px;
+	font-size: 5vw;
 	transition: 0.6s;
 	border-radius: 0 3px 3px 0;
 	outline: none;
@@ -52,10 +53,10 @@
 .caption-text {
 	background: rgba(0,0,0,0.4);
 	color: #f2f2f2;
-	font-size: 18px;
+	font-size: 5vw;
 	position: absolute;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 2vw;
+	padding-bottom: 2vw;
 	bottom: 0px;
 	width: 100%;
 	padding-left: 10px;
