--- a/spotlight.css
+++ b/spotlight.css
@@ -15,7 +15,7 @@
 .showcase
 {
     width: 100%;
-    height: 240px;
+    height: 62.5vw;
     margin-bottom: 10px;
     position: relative;
 }
@@ -28,6 +28,7 @@
 
 #spotlight-title
 {
+    font-size: 4vw;
     padding-left: 10px; 
     font-family: 'Noto Sans', sans-serif;
     text-transform: uppercase;
