--- a/spotlight.css
+++ b/spotlight.css
@@ -62,7 +62,15 @@
 	padding-right: 10px;
 }
 
-.btn-read-more:hover
+.btn-read-more:active
 {
     background: #3B1647;
+}
+
+@media screen and (min-width: 1024px)
+{
+    .btn-read-more:hover
+    {
+        background: #3B1647;
+    }
 }
