--- a/spotlight.css
+++ b/spotlight.css
@@ -56,7 +56,7 @@
     background: #762C8E;
 	position: absolute;
     padding: 10px;
-    margin: 10px;
+    line-height: 47px;
     bottom: 0px;
     right: 0;
 	padding-right: 10px;
