--- a/style.css
+++ b/style.css
@@ -35,12 +35,21 @@ header
 
 .cart
 {
+    width: 50px;
+    height: 50px;
     grid-column: 3/4;
     grid-row: 1/2;
-    padding: 18px;
     text-decoration: none;
     color: white;
     transition: 0.5s;
+}
+
+.cart div
+{
+    position: relative;
+    font-size: 1.3em;
+    line-height: 50px;
+    text-align: center;
 }
 
 .cart:active
