--- a/product_tab.css
+++ b/product_tab.css
@@ -1,8 +1,3 @@
-#tab
-{
-    grid-row: 3/4;
-}
-
 .tab-wrapper
 {
     display: grid;
@@ -39,7 +34,7 @@
 
 .tab-content
 {
-    position: absolute;
+    position: relative;
     width: 100%;
     display: none;
 }
