--- a/style.css
+++ b/style.css
@@ -115,12 +115,68 @@ header
 
 footer
 {
+    display: grid;
+    grid-template-rows: auto auto auto auto;
     background: #2D3142;
 }
 
 #payment-logo
 {
+    grid-row: 1/2;
     color: white;
+    text-align: center;
+}
+
+#payment-logo i
+{
+    font-size: 10vw;
+    margin: 10px;
+}
+
+#footer-menu
+{
+    display: grid;
+    grid-row: 2/3;
+    grid-template-rows: auto auto;
+}
+
+.footer-option
+{
+    font-size: 18px;
+    position: relative;
+    text-decoration: none;
+    color: white;
+    font-weight: bold;
+    padding: 10px;
+    border-top: 1px solid white;
+}
+
+#social-media
+{
+    grid-row: 3/4;
+    text-align: center;
+    border-top: 1px solid white;
+}
+
+#social-media a
+{
+    text-decoration: none;
+    color: white;
+    font-size: 32px;
+    margin: 15px;
+}
+
+#copyright
+{
+    grid-row: 4/5;
+    border-top: 1px solid white;
+    text-align: center;
+}
+
+#copyright p
+{
+    color: white;
+    font-size: 12px;
 }
 
 /*Tablet & Desktop*/
