--- a/spotlight.css
+++ b/spotlight.css
@@ -14,12 +14,14 @@
 
 .showcase img
 {
+    position: relative;
     width: 100%;
     height: 100%;
 }
 
 #spotlight-title
 {
+    position: relative;
     font-size: 4vw;
     padding-left: 10px; 
     text-transform: uppercase;
@@ -52,6 +54,7 @@
 
 .product-price sup
 {
+    position: relative;
     font-size: 10px;
 }
 
