--- a/style.css
+++ b/style.css
@@ -2,6 +2,15 @@
 
 *{outline: none}
 
+.title{
+    display: none;
+    position: relative;
+    font-size: 4vw;
+    padding-left: 10px; 
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
 body
 {
     margin: 0;
@@ -51,7 +60,9 @@ header
 {
     position: relative;
     font-size: 1.3em;
-    line-height: 50px;
+    line-height: 25px;
+    top: 50%;
+    transform: translateY(-50%);
     text-align: center;
 }
 
@@ -62,37 +73,7 @@ header
 
 .login
 {
-    position: relative;
     display: none;
-    text-align: center;
-    margin: 10px;
-    transition: 0.5s;
-}
-
-.login:hover
-{
-    background: #3E435B;
-    box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
-}
-
-.login:active
-{
-    box-shadow: 0px 0px rgba(0, 0, 0, 0);
-}
-
-.login-btn
-{
-    text-transform: uppercase;
-    text-decoration: none;
-    color: white;
-    padding-left: 20px;
-    padding-right: 20px;
-    font-size: 1.3em;  
-}
-
-.login-btn i.fa.fa-user
-{
-    padding-right: 5px;
 }
 
 .body
@@ -104,11 +85,24 @@ header
     transition: 0.5s;
 }
 
+.trend-container
+{
+    grid-row: 1/2;
+    display: grid;
+    grid-template-columns: auto;
+}
+
+#daily-deal
+{
+    position: relative;
+    display: none;
+    margin-top: 2.5px;
+}
+
 #slideshow
 {
     position: relative;
 	margin-top: 2.5px;
-	grid-row: 1/2
 }
 
 #spotlight
@@ -202,6 +196,11 @@ footer
 /*Tablet & Desktop*/
 @media screen and (min-width: 1024px)
 {
+    .title{
+		display: block;
+    	font-size: 20px;
+    }
+    
     header
     {
         grid-template-columns: 200px auto 200px 70px;
@@ -217,13 +216,106 @@ footer
     {
         grid-column: 4/5;
         grid-row: 1/3;
-        font-size: 1.5em;
+        font-size: 1.3em;
+    }
+
+    .cart:hover
+    {
+        background: #3E435B;
+        box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
+    }
+
+    .cart:active
+    {
+        box-shadow: 0px 0px rgba(0, 0, 0, 0.4);
     }
 
     .login
     {
+        width: 80%;
+        height: 50px;
         display: block;
         grid-column: 3/4;
         grid-row: 1/3;
+        margin-left: 20px;
+        transition: 0.5s;
     }
+
+    .login div
+    {
+        position: relative;
+        font-size: 1.5em;
+        line-height: 25px;
+        top: 50%;
+        transform: translateY(-50%);
+        text-align: center;
+    }
+
+    .login:hover
+    {
+        background: #3E435B;
+        box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
+    }
+
+    .login:active
+    {
+        box-shadow: 0px 0px rgba(0, 0, 0, 0);
+    }
+
+    .login-btn
+    {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: white;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .login-btn i.fa.fa-user
+    {
+        padding-right: 5px;
+    }
+
+    .body
+    {
+        grid-template-rows: auto auto auto;
+    }
+
+    .trend-container
+    {
+        height: 526px;
+        grid-template-columns: 800px auto;
+        justify-content: center;
+        align-content: center;
+        overflow: hidden;
+    }
+
+    #slideshow
+    {
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+
+    #daily-deal
+    {
+        display: block;
+        width: 342px;
+        height: 456px;
+        grid-column: 2/3;
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+
+    #daily-deal img
+    {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+
+    #slideshow
+    {
+        grid-column: 1/2;
+        max-width: 768px;
+    } 
 }
