--- a/style.css
+++ b/style.css
@@ -102,13 +102,15 @@ header
 #slideshow
 {
     position: relative;
-	margin-top: 2.5px;
+    margin-top: 2.5px;
 }
 
 #spotlight
 {
     position: relative;
     grid-row: 2/3;
+    display: grid;
+    justify-content: center;
     overflow: hidden;
 }
 
@@ -283,12 +285,17 @@ footer
 
     .trend-container
     {
-        height: 526px;
-        grid-template-columns: 800px auto;
+        grid-template-columns: 650px auto;
         justify-content: center;
         align-content: center;
         overflow: hidden;
+        background: rgb(20, 23, 32);
     }
+
+    #slide-wrapper
+    {
+        max-height: 337.5px;
+	}
 
     #slideshow
     {
@@ -299,7 +306,52 @@ footer
     #daily-deal
     {
         display: block;
-        width: 342px;
+        width: 253.125px;
+        height: 361.5px;
+        grid-column: 2/3;
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+
+    #daily-deal img
+    {
+        width: 100%;
+        height: 100%;
+        position: relative;
+    }
+
+    #slideshow
+    {
+        grid-column: 1/2;
+        max-width: 600px;
+    } 
+}
+
+@media screen and (min-width: 1280px)
+{
+    .trend-container
+    {
+        grid-template-columns: 800px auto;
+        justify-content: center;
+        align-content: center;
+        overflow: hidden;
+    }
+
+    #slide-wrapper
+    {
+        max-height: 432px;
+	}
+
+    #slideshow
+    {
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+
+    #daily-deal
+    {
+        display: block;
+        width: 324px;
         height: 456px;
         grid-column: 2/3;
         margin-top: 10px;
