--- a/product_tab.css
+++ b/product_tab.css
@@ -80,3 +80,11 @@
         padding-right: 6vw;
     }
 }
+
+@media screen and (min-width: 1024px)
+{
+    #tab
+    {
+        display: none;
+    }
+}
