--- a/style.css
+++ b/style.css
@@ -121,6 +121,13 @@ header
     overflow: hidden;
 }
 
+#product-wrapper
+{
+    display: none;
+    position: relative;
+    grid-row: 3/4;
+}
+
 footer
 {
     position: relative;
@@ -280,7 +287,7 @@ footer
 
     .body
     {
-        grid-template-rows: auto auto auto;
+        grid-template-rows: repeat(3, auto);
     }
 
     .trend-container
@@ -325,6 +332,67 @@ footer
         grid-column: 1/2;
         max-width: 600px;
     } 
+
+    #product-wrapper
+    {
+        display: block;
+    }
+
+    footer 
+    {
+        grid-template-columns: repeat(4, auto);
+        align-items: center;
+        overflow: hidden;
+    }
+
+    #payment-logo
+    {
+        grid-row: 1/5;
+        grid-column: 2/3;
+    }
+
+    #payment-logo i
+    {
+        font-size: 3vw;
+        margin-left: 10px;
+    }
+
+    #footer-menu
+    {
+        grid-row: 1/5;
+        grid-column: 1/2;
+    }
+
+    .footer-option
+    {
+        border-top: 0px solid white;
+        padding-left: 10px;
+    }
+
+    #social-media
+    {
+        grid-row: 1/5;
+        border-top: 0px solid white;
+        border-left: 1px solid white;
+        border-right: 1px solid white;
+    }
+
+    #social-media a
+    {
+        font-size: 24px;
+        margin: 15px;
+    }
+
+    #copyright
+    {
+        grid-row: 1/5;
+        border-top: 0px solid white;
+    }
+
+    #copyright p
+    {
+        font-size: 12px;
+    }
 }
 
 @media screen and (min-width: 1280px)
