--- a/product_card.css
+++ b/product_card.css
@@ -75,6 +75,7 @@
         width: 210px;
         height: 280px;
         margin: 16px;
+        box-shadow: 0px 0px rgba(0, 0, 0, 0.4);
     }
 
     .content-product-name
