--- a/style.css
+++ b/style.css
@@ -2,15 +2,6 @@
 
 *{outline: none}
 
-.title{
-    display: none;
-    position: relative;
-    font-size: 4vw;
-    padding-left: 10px; 
-    text-transform: uppercase;
-    font-weight: bold;
-}
-
 body
 {
     margin: 0;
@@ -19,63 +10,7 @@ body
     background: white;
 }
 
-header
-{
-    position: relative;
-    display: grid;
-    grid-template-columns: 50px auto 50px;
-    grid-template-rows: 50px 37px auto;
-    align-items: center;
-    background: #2D3142;
-    z-index: 3;
-}
-
-.logo
-{
-    grid-column: 2/3;
-    grid-row: 1/2;
-}
-
-.logo img
-{
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    padding-top: 10px;
-    height: 50px;
-}
-
-.cart
-{
-    width: 50px;
-    height: 50px;
-    grid-column: 3/4;
-    grid-row: 1/2;
-    text-decoration: none;
-    color: white;
-    transition: 0.5s;
-}
-
-.cart div
-{
-    position: relative;
-    font-size: 1.3em;
-    line-height: 25px;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
-}
-
-.cart:active
-{
-    background: #3E435B;
-}
-
-.login
-{
-    display: none;
-}
-
+/*=====Body=====*/
 .body
 {
     position: relative;
@@ -85,6 +20,7 @@ header
     transition: 0.5s;
 }
 
+/*-----Trend Container-----*/
 .trend-container
 {
     grid-row: 1/2;
@@ -98,198 +34,18 @@ header
     display: none;
     margin-top: 2.5px;
 }
-
-#slideshow
-{
-    position: relative;
-    margin-top: 2.5px;
-}
-
-#spotlight
-{
-    position: relative;
-    grid-row: 2/3;
-    display: grid;
-    justify-content: center;
-    overflow: hidden;
-}
-
-#tab
-{
-    position: relative;
-    grid-row: 3/4;
-    overflow: hidden;
-}
-
-#product-wrapper
-{
-    display: none;
-    position: relative;
-    grid-row: 3/4;
-}
-
-footer
-{
-    position: relative;
-    display: grid;
-    grid-template-rows: auto auto auto auto;
-    background: #2D3142;
-    z-index: 1;
-    transition: 0.5s;
-}
-
-#payment-logo
-{
-    grid-row: 1/2;
-    color: white;
-    text-align: center;
-}
-
-#payment-logo i
-{
-    font-size: 10vw;
-    margin: 10px;
-}
-
-#footer-menu
-{
-    display: grid;
-    grid-row: 2/3;
-    grid-template-rows: auto auto;
-}
-
-.footer-option
-{
-    font-size: 18px;
-    position: relative;
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    padding: 10px;
-    border-top: 1px solid white;
-}
-
-.footer-option:active
-{
-    text-decoration: underline;
-}
-
-#social-media
-{
-    grid-row: 3/4;
-    text-align: center;
-    border-top: 1px solid white;
-}
-
-#social-media a
-{
-    text-decoration: none;
-    color: white;
-    font-size: 32px;
-    margin: 15px;
-}
-
-#copyright
-{
-    grid-row: 4/5;
-    border-top: 1px solid white;
-    text-align: center;
-}
-
-#copyright p
-{
-    color: white;
-    font-size: 12px;
-}
+/*=====Body=====*/
 
 /*Tablet & Desktop*/
 @media screen and (min-width: 1024px)
-{
-    .title{
-		display: block;
-    	font-size: 20px;
-    }
-    
-    header
-    {
-        grid-template-columns: 200px auto 200px 70px;
-    }
-
-    .logo
-    {
-        grid-column: 1/2;
-        grid-row: 1/3;
-    }
-
-    .cart
-    {
-        grid-column: 4/5;
-        grid-row: 1/3;
-        font-size: 1.3em;
-    }
-
-    .cart:hover
-    {
-        background: #3E435B;
-        box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
-    }
-
-    .cart:active
-    {
-        box-shadow: 0px 0px rgba(0, 0, 0, 0.4);
-    }
-
-    .login
-    {
-        width: 80%;
-        height: 50px;
-        display: block;
-        grid-column: 3/4;
-        grid-row: 1/3;
-        margin-left: 20px;
-        transition: 0.5s;
-    }
-
-    .login div
-    {
-        position: relative;
-        font-size: 1.5em;
-        line-height: 25px;
-        top: 50%;
-        transform: translateY(-50%);
-        text-align: center;
-    }
-
-    .login:hover
-    {
-        background: #3E435B;
-        box-shadow: 0px 5px rgba(0, 0, 0, 0.4);
-    }
-
-    .login:active
-    {
-        box-shadow: 0px 0px rgba(0, 0, 0, 0);
-    }
-
-    .login-btn
-    {
-        text-transform: uppercase;
-        text-decoration: none;
-        color: white;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-
-    .login-btn i.fa.fa-user
-    {
-        padding-right: 5px;
-    }
-
+{   
+    /*=====Body=====*/
     .body
     {
         grid-template-rows: repeat(3, auto);
     }
 
+    /*-----Trend Container-----*/
     .trend-container
     {
         grid-template-columns: 650px auto;
@@ -297,17 +53,6 @@ footer
         align-content: center;
         overflow: hidden;
         background: rgb(20, 23, 32);
-    }
-
-    #slide-wrapper
-    {
-        max-height: 337.5px;
-	}
-
-    #slideshow
-    {
-        margin-top: 10px;
-        margin-bottom: 30px;
     }
 
     #daily-deal
@@ -326,94 +71,20 @@ footer
         height: 100%;
         position: relative;
     }
-
-    #slideshow
-    {
-        grid-column: 1/2;
-        max-width: 600px;
-    } 
-
-    #product-wrapper
-    {
-        display: block;
-    }
-
-    footer 
-    {
-        grid-template-columns: repeat(4, auto);
-        align-items: center;
-        overflow: hidden;
-    }
-
-    #payment-logo
-    {
-        grid-row: 1/5;
-        grid-column: 2/3;
-    }
-
-    #payment-logo i
-    {
-        font-size: 3vw;
-        margin-left: 10px;
-    }
-
-    #footer-menu
-    {
-        grid-row: 1/5;
-        grid-column: 1/2;
-    }
-
-    .footer-option
-    {
-        border-top: 0px solid white;
-        padding-left: 10px;
-    }
-
-    #social-media
-    {
-        grid-row: 1/5;
-        border-top: 0px solid white;
-        border-left: 1px solid white;
-        border-right: 1px solid white;
-    }
-
-    #social-media a
-    {
-        font-size: 24px;
-        margin: 15px;
-    }
-
-    #copyright
-    {
-        grid-row: 1/5;
-        border-top: 0px solid white;
-    }
-
-    #copyright p
-    {
-        font-size: 12px;
-    }
+    /*=====Body=====*/
 }
 
+/*Desktop only*/
 @media screen and (min-width: 1280px)
 {
+    /*=====Body=====*/
+    /*-----Trend Container-----*/
     .trend-container
     {
         grid-template-columns: 800px auto;
         justify-content: center;
         align-content: center;
         overflow: hidden;
-    }
-
-    #slide-wrapper
-    {
-        max-height: 432px;
-	}
-
-    #slideshow
-    {
-        margin-top: 10px;
-        margin-bottom: 30px;
     }
 
     #daily-deal
@@ -432,10 +103,4 @@ footer
         height: 100%;
         position: relative;
     }
-
-    #slideshow
-    {
-        grid-column: 1/2;
-        max-width: 768px;
-    } 
 }
