--- a/style/footer.css
+++ b/style/footer.css
@@ -28,7 +28,7 @@ footer
 {
     display: grid;
     grid-row: 2/3;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto auto;
 }
 
 .footer-option
@@ -37,7 +37,6 @@ footer
     position: relative;
     text-decoration: none;
     color: white;
-    font-weight: bold;
     padding: 10px;
     border-top: 1px solid white;
 }
@@ -106,12 +105,19 @@ footer
     {
         grid-row: 1/5;
         grid-column: 1/2;
+        border-right: 2px solid white;
     }
 
     .footer-option
     {
         border-top: 0px solid white;
-        padding-left: 10px;
+        padding-left: 20px;
+        transition: 0.5s;
+    }
+
+    .footer-option:hover
+    {
+        background: #3E435B;
     }
 
     /*-----Social Mefia Icon-----*/
