--- a/style/header.css
+++ b/style/header.css
@@ -4,7 +4,7 @@ header
     position: relative;
     display: grid;
     grid-template-columns: 50px auto 50px;
-    grid-template-rows: 50px 37px auto;
+    grid-template-rows: 50px 37px;
     align-items: center;
     background: #2D3142;
     z-index: 3;
@@ -64,20 +64,21 @@ header
     header
     {
         grid-template-columns: 200px auto 200px 70px;
+        grid-template-rows: 70px;
     }
 
     /*-----Logo-----*/
     .logo
     {
         grid-column: 1/2;
-        grid-row: 1/3;
+        grid-row: 1/2;
     }
 
     /*-----Shopping Cart Icon-----*/
     .cart-icon
     {
         grid-column: 4/5;
-        grid-row: 1/3;
+        grid-row: 1/2;
         font-size: 1.3em;
     }
 
@@ -99,7 +100,7 @@ header
         height: 50px;
         display: block;
         grid-column: 3/4;
-        grid-row: 1/3;
+        grid-row: 1/2;
         margin-left: 20px;
         transition: 0.5s;
     }
