Add product page

--- a/style/common-style.css
+++ b/style/common-style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans');
+
+*{outline: none}
+
+body
+{
+    margin: 0;
+    font-family: 'Noto Sans', sans-serif;
+    line-height: 1.5;
+    background: white;
+}
+
 .title{
     display: none;
     position: relative;
