--- a/style/common-style.css
+++ b/style/common-style.css
@@ -32,6 +32,15 @@ body
     background: #762C8E;
 }
 
+.small-btn
+{
+    text-decoration: none;
+    color: black;
+    background: rgb(180, 180, 180); 
+    border-radius: 5px;
+    padding: 2.5px;
+}
+
 .purple-btn:active
 {
     background: #3B1647;
