--- a/account/style/admin-login-form.css
+++ b/account/style/admin-login-form.css
@@ -11,7 +11,7 @@ body {
 }
 
 .form-signin {
-  max-width: 380px;
+  max-width: 75vw;
   border-radius: 10px;
   padding: 15px 35px 45px;
   margin: 0 auto;
@@ -22,8 +22,7 @@ body {
  .logo {
     margin-bottom: 30px;
     object-fit: contain;
-    width:200px;
-    height:100px
+     max-width:50vw
 	}
   .password{
     text-align: left;
@@ -59,5 +58,20 @@ body {
     margin-top: 10px;
     text-align: right;
     
+  }
+  @media screen and (min-width:1024px)
+  {
+    
+    
+.form-signin {
+  max-width: 25vw;
+  border-radius: 10px;
+
+}
+ .logo {
+     max-width:13vw
+  }
+  
+
   }
 
