--- a/product/style/style.css
+++ b/product/style/style.css
@@ -169,3 +169,139 @@
     font-size: 5.5vw;
 }
 /*=====Body=====*/
+
+@media screen and (min-width: 1024px)
+{
+    .body
+    {
+        display: grid;
+        grid-template-rows: repeat(8, auto);
+        grid-template-columns: 650px 255px;
+        justify-content: center;
+    }
+
+    .product-img-wrapper
+    {
+        display: grid;
+        grid-template-rows: auto auto;
+        justify-content: center;
+    }
+
+    .recent-img img
+    {
+        width: 600px;
+        margin: 10px;
+    }
+
+    .img-wrapper img 
+    {
+        width: 130px
+    }
+
+    .product-name
+    {
+        grid-row: 1/2;
+        grid-column: 1/3;
+    }
+
+    .product-name
+    {
+        font-size: 48px;
+    }
+
+    .product-name sup 
+    {
+        font-size: 16px;
+    }
+
+    .product-img-wrapper
+    {
+        grid-row: 2/3;
+        grid-column: 1/2;
+    }
+
+    .right-hand-side-wrapper
+    {
+        display: grid;
+        grid-row: 2/3;
+        grid-column: 2/3;
+        grid-template-rows: 40px 40px 60px 100px;
+    }
+
+    .product-genre
+    {
+        font-size: 20px;
+    }
+
+    .product-genre a
+    {
+        font-size: 16px !important;
+    }
+
+    .product-price
+    {
+        font-size: 32px;
+        padding-left: 0px;
+    }
+
+    .btn-wrapper a 
+    {
+        font-size: 24px;
+    }
+
+    .product-description
+    {
+        grid-row: 3/4;
+        grid-column: 1/3;
+    }
+
+    .product-description .title
+    {
+        font-size: 18px;
+    }
+
+    .description
+    {
+        font-size: 16px;
+    }
+
+    .related-product-wrapper
+    {
+        grid-row: 4/5;
+        grid-column: 1/3;
+    }
+
+    .related-product-wrapper .title
+    {
+        font-size: 24px;
+    }
+
+    .related-product-container
+    {
+        display: grid;
+        grid-template-columns: repeat(4, auto);
+    }
+
+    .related-product 
+    {
+        grid-template-columns: auto;
+        justify-content: center;
+        grid-template-rows: repeat(3, auto);  
+    }
+
+    .related-product img
+    {
+        width: 11vw;
+        padding: 5px;
+    }
+
+    .related-product .related-product-name
+    {
+        font-size: 24px;
+    }
+
+    .related-product .related-product-price
+    {
+        font-size: 32px;
+    }
+}
