--- a/product/style/style.css
+++ b/product/style/style.css
@@ -120,7 +120,7 @@
     font-size: 4vw;
 }
 
-.related-product-wrapper .title
+.title
 {
     display: block;
     font-size: 4.5vw;
@@ -167,6 +167,11 @@
 .related-product .related-product-price
 {
     font-size: 5.5vw;
+}
+
+.related-product-card-container
+{
+    display: none;
 }
 /*=====Body=====*/
 
@@ -267,41 +272,32 @@
 
     .related-product-wrapper
     {
+        display: none;
+    }
+
+    #related-product-title
+    {
+        font-size: 24px;
         grid-row: 4/5;
         grid-column: 1/3;
     }
 
-    .related-product-wrapper .title
-    {
-        font-size: 24px;
-    }
-
-    .related-product-container
+    .related-product-card-container
     {
         display: grid;
+        grid-row: 5/6;
+        grid-column: 1/3;
         grid-template-columns: repeat(4, auto);
     }
 
-    .related-product 
-    {
-        grid-template-columns: auto;
-        justify-content: center;
-        grid-template-rows: repeat(3, auto);  
-    }
-
-    .related-product img
+    .product-card
     {
         width: 11vw;
-        padding: 5px;
+        height: 16.5vw;
     }
 
-    .related-product .related-product-name
+    .content-product-name
     {
-        font-size: 24px;
-    }
-
-    .related-product .related-product-price
-    {
-        font-size: 32px;
+        bottom: 5.5vw;
     }
 }
