--- a/product/style/style.css
+++ b/product/style/style.css
@@ -288,16 +288,33 @@
         grid-row: 5/6;
         grid-column: 1/3;
         grid-template-columns: repeat(4, auto);
+        justify-items: center;
     }
 
     .product-card
     {
-        width: 11vw;
-        height: 16.5vw;
+        width: 138.24px;
+        max-width: 172.8px;
+        height: 207.36px;
+        max-height: 259.2px;
     }
 
     .content-product-name
     {
-        bottom: 5.5vw;
+        bottom: 69.12px;
+    }
+}
+
+@media screen and (min-width: 1280px)
+{
+    .product-card
+    {
+        width: 172.8px;
+        height: 259.2px;
+    }
+
+    .content-product-name
+    {
+        bottom: 86.4px;
     }
 }
