--- a/style/common-style.css
+++ b/style/common-style.css
@@ -30,6 +30,7 @@ body
     text-decoration: none;
     color: white;
     background: #762C8E;
+    transition: 0.5s;
 }
 
 .small-btn
@@ -39,6 +40,7 @@ body
     background: rgb(180, 180, 180); 
     border-radius: 5px;
     padding: 2.5px;
+    transition: 0.5s;
 }
 
 .purple-btn:active
