--- a/style/footer.css
+++ b/style/footer.css
@@ -28,7 +28,7 @@ footer
 {
     display: grid;
     grid-row: 2/3;
-    grid-template-rows: auto auto auto auto;
+    grid-template-rows: auto auto auto auto auto;
 }
 
 .footer-option
