--- a/category/style/style.css
+++ b/category/style/style.css
@@ -4,11 +4,10 @@
     text-align: left;
     color:rgb(0, 0, 0);
     background: #ffffff;
-    padding: 2vw 3vw 2vw;
+    padding: 3vw 3vw 2vw;
     font-size: 5vw;
-    margin: 6vw 1vw 3vw;
+    margin: 4vw 2vw 3vw;
     font-weight:bold;
-    border: 2vw;
 
 }
 
@@ -21,7 +20,9 @@
 {
     display: grid;
     padding-top:2vw;
-    grid-template-columns: 30% 70%;
+    grid-template-columns: 30% 50% 20%;
+    text-decoration: none;
+    color:black;
     padding-bottom: 2vw;
     max-width: 100%;
     padding: 1vw;
@@ -44,17 +45,38 @@
 {
     height: 25vw;
     width: 25vw;
-    border-radius: 2wv;
+    border-radius: 5px;
 }
 
 .info
 {
     grid-column: 2/3;
 }
+.buy-now-btn
+{
+    grid-column: 3/4;
+    background-color: rgb(182, 67, 67);
+    color: white;
+    margin-top: 5vw;
+    padding: 2vw 3vw;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 4vw;
+    height: 90%;
+    border-radius:6px; 
+    cursor: pointer;
+    box-shadow: 5px 7px 4px 0 rgba(0,0,0,.25);
+}
+.buy-now-btn:hover
+{
+    background-color: rgb(207, 84, 84);
+}
 
 .pro-name
 {
-    font-size: 5vw;
+    font-size: 3.5vw;
+    text-decoration: none;
     font-weight:bold;
     padding-bottom:1vw;
     margin-left: 2vw;  
@@ -64,7 +86,7 @@
 .pro-price
 {
     padding-top:1vw;
-    font-size:5vw;
+    font-size:4vw;
     padding-bottom: 1vw;
     margin-left: 2vw; 
     font-weight: bolder;
@@ -80,15 +102,24 @@
 {
     
     background-color: #762C8E;
-    border: 2vw;
     color: white;
+    margin-top: 2vw;
+    margin-bottom: 2vw;
     padding: 3vw 3vw;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 4vw;
-    border-radius:5vw; 
+    font-size: 3.5vw;
+    height: 6vw;
+    border-radius:4px; 
     cursor: pointer;
+    box-shadow: 0 4px 4px 0 rgba(0,0,0,.25);
+}
+.button:hover
+{
+    background-color: rgb(143, 57, 172);
+    
+  
 }
 
 @media screen and (min-width: 1024px)
