--- a/admin/style/style.css
+++ b/admin/style/style.css
@@ -19,6 +19,11 @@
 
     
 }
+.login-btn
+{
+    font-size: 15pt !important;
+    text-transform: none !important;
+}
 .info
 {
     grid-column: 2/3;
@@ -106,6 +111,6 @@
     margin: 15px;
     background:white;
     border-radius: 2px;
-    height: 240px;;
+    height: 300px;;
     box-shadow: 0 4px 10px 0 rgba(0,0,0,0.2);
 }
