--- a/about-us/style/style.css
+++ b/about-us/style/style.css
@@ -86,6 +86,7 @@ body
     {
         margin-top: 20px;
         font-size: 30px;
+        text-align: center;
 
     }
     
@@ -94,6 +95,8 @@ body
         display: flex;
         margin: 30px 50px 20px 50px;
         max-width: 100%;
+        align-items: center;
+        text-align: center;
     }
 
     .team-body
